--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
