--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,5 +4,5 @@ NODE_ENV=development
 
 # FE
 ALLOW_DEBUG=1
-API_URL=http://localhost:3010
+API_URL=http://localhost:3010/api
 WS_URL=ws://localhost:3010
