--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,7 +5,8 @@
     "target": "es5" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
     "lib": [
       "es6",
-      "dom"
+      "dom",
+      "es2020.promise"
     ] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
     /* Modules */
     "module": "ES6" /* Specify what module code is generated. */,
